--- a/2018 Harrisburg GeoDev Summit/notebooks/finding_hospitals_closest_to_an_incident.ipynb
+++ b/2018 Harrisburg GeoDev Summit/notebooks/finding_hospitals_closest_to_an_incident.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
     "from arcgis.gis import GIS\n",
     "\n",
     "#connect to your GIS\n",
-    "my_gis = GIS('https://citygov.maps.arcgis.com', 'phammons_citygov')"
+    "my_gis = GIS('https://localgovne.maps.arcgis.com', 'patrick.hammons.tugis')"
    ]
   },
   {
@@ -286,7 +286,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "map1 = my_gis.map('Rio de Janeiro, Brazil')\n",
@@ -824,7 +826,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
